<resources>
    <string name="app_name">College Scheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_toDo">To Do</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="className">Class Name</string>
    <string name="assignmentName">Assignment Name</string>
    <string name="dueDate">Due date</string>
    <string name="Back">Back</string>
    <string name="Add">Add</string>
    <string name="SortClass">Sort by Class</string>
    <string name="SortDueDate">Sort by Due Date</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="action">What do you want to do?</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="date"> MM/dd/yyyy</string>
    <string name="exams">Exams</string>
    <string name="add_new_exam">Add New Exam</string>
    <string name="subject">Subject</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Time" />
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="enter_location">Enter Location</string>
    <string name="remove">Remove</string>
    <string name="exam_detail">Exam Detail</string>
    <string name="exam_details">Exam Details</string>
    <string name="btnUpdateText">Update</string>
    <string name="class_details">Class Details</string>
</resources>
